backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-backend
  labels:
    app: counter-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      labels:
        app: counter-backend
    spec:
      containers:
      - name: counter-backend
        image: ghcr.io/sumpfmaus-shs/backend:v1
        ports:
        - containerPort: 8080
