backend/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-database
  template:
    metadata:
      labels:
        app: counter-database
    spec:
      containers:
      - name: counter-database
        image: quay.io/centos7/postgresql-10-centos7:20221109
        imagePull policy: Always
        ports:
        - containerPort: 5432
